--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,9 @@
 }
 
 body {
-  width: 900px;
-  min-height: 500px;
+  background: linear-gradient(45deg, #DB995A, #323835);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
