--- a/client/src/components/layouts/formulario/Input.module.css
+++ b/client/src/components/layouts/formulario/Input.module.css
@@ -35,5 +35,9 @@
         width: 90vw;
         margin-bottom: .1em;
     }  
+
+    .input_container input[type=date]{
+        background-color: rgb(255, 255, 255);
+    }
     
 }
