style: Melhorias na estilização do frontend

--- a/client/src/components/layouts/ItemInfo.module.css
+++ b/client/src/components/layouts/ItemInfo.module.css
@@ -3,31 +3,30 @@
     border-bottom: solid #323835;
     background-color: #EFEFEF;
 }
-
 .item_infor_container h2 {
     display: inline;
     padding-bottom: 1em;
 }
-
 .dados {
     display: flex;
     justify-content: space-between; 
 }
-
-.dados_pessoais, .dados_endereco, .dados button{
+.dados_pessoais, .dados_endereco,.botoes button{
     margin: 0;
     list-style: none;
 }
-
 .dados_pessoais span, .dados_endereco span {
     font-weight: bold;
 }
-
 .dados_pessoais p, .dados_endereco p {
     color: #323835
 }
-
-.dados button {
+.botoes {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+.botoes button, .botoes a {
     background-color: #323835;
     color: #DB995A;
     font-size: 0.9em;
@@ -36,19 +35,18 @@
     display: flex;
     align-items: center;
     padding: 1em;
+    margin: 1em 0;
     border: none;
     cursor: pointer;
+    text-decoration: none;
 }
-
-.dados button:hover {
+.botoes button:hover, .botoes a:hover  {
     background-color: #DB995A ;
     color: #323835;
 }
-
-.dados button svg {
+.botoes button svg, .botoes a svg {
     margin: 0 .5em 0 0;
 }
-
 .item {
     padding: .3em 0em;
 }
@@ -56,12 +54,9 @@
     display: inline;
     padding-right: .5em;
 }
-
 .item p:nth-child(1){
     font-weight: bold;
 }
-
-
 
 @media(max-width: 630px){
     .item {
@@ -69,13 +64,10 @@
         flex-direction: column;
         justify-content: flex-start;
     }
-
     .item p {
         margin: 0;
     }
-
     .item p:nth-child(1){
         font-weight: 900;
     }
-
 }
