--- a/client/src/components/pages/Home.module.css
+++ b/client/src/components/pages/Home.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     background-color: #EFEFEF;
-    height: 580px;
-    width: 65vw;
+    min-height: 580px;
+    max-height: 580px;
     justify-content: space-around;
     padding: 0em 1em;
+    width: 65vw
 }
-
 .imagem {
     display: flex;
     justify-content: center;
@@ -17,13 +17,11 @@
     width: 250px;
     opacity: 0.8;
 }
-
 .conteudo {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
 .conteudo h1{
     max-width: 400px;
     word-break: break-all;
@@ -32,7 +30,6 @@
     font-size: 2em;
     word-break: normal;
 }
-
 .conteudo p{
     color: #323835;
     margin-bottom: .5em;
@@ -40,7 +37,6 @@
     text-align: center;
     word-break: normal;
 }
-
 .btn{
     text-decoration: none;
     color: #DB995A;
@@ -56,7 +52,6 @@
     font-size: 1.2em;
     margin-bottom: .5em;
 }
-
 .btn:hover{
     background-color: #DB995A ;
     color: #323835;
@@ -64,26 +59,20 @@
 }
 
 @media(max-width: 630px){
-
     .home_container {
+        min-height: 100vh;
         width: 100vw;
-        height: calc(100vh - 10vh);
+        height: none;
     }
-
     .conteudo h1 {
         font-size: 2.8em;
     }
-
     .conteudo p {
         font-size: 1.7em;
     }
-
     .conteudo a{
         font-size: 1.4em;
 
-    }
-    
-
-
+    }   
 }
 
